# PyDockStats

./: .gitignore  README.md  app.py  app_utils.py  calcs.py  charts.py  contributors  curves.py  docking_load.py  help.txt  introduction.py  pc_roc.py  putils.py  pydockstats.py  pyproject.toml  requirements.txt  tabs.py  utils.py
examples/: readme
images/: readme.txt
src/PyDockStats/: __init__.py  __main__.py  cli.py  pydockstats.py
