[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyDockStats"
version = "1.0.0"
description = "Tool to build ROC and Predictiveness Curve plots for virtual screening"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LGPL-3.0-or-later" }
authors = [
	{ name = "Matheus Campos de Mattos" },
	{ name = "Luciano T. Costa" }
]
dependencies = [
	"matplotlib==3.10.9",
	"numpy==2.4.4",
	"pandas==3.0.2",
	"scikit-learn==1.8.0",
	"scienceplots==2.2.1",
	"typer==0.25.0"
]

[project.scripts]
pydockstats = "PyDockStats.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/PyDockStats"]

[tool.hatch.build.targets.sdist]
packages = ["src/PyDockStats"]

